--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,21 +10,35 @@
 <div id="indexElement" v-el:node>
 
   <div>
-    <div class="col-md-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
+    <div class="col-xs-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
     <div class="pull-right">
-      <a class="btn btn-danger btn-sm"
+      <a class="btn btn-danger btn-sm disabled"
       @click="delete_entry()"
-        :class="{disabled: picked.code[1] > 0}" v-if="can_delete()">
+        :class="{disabled: can_delete()}">
           <%= fa 'times' %>
           <%= t 'common.btn.delete' %>
       </a>&nbsp
     </div>
 
     <div class="pull-right">
-      <a class="btn btn-default btn-sm"
-          v-bind:href="picked.edit_project_url"
-          v-if="can_edit()">
+      <div class="btn-group">
+           <a class="btn btn-default btn-sm dropdown-toggle disabled" data-toggle="dropdown" href="#" :class="{disabled: !picked}">
+             <%= t 'common.btn.settings' %> <span class="caret"></span>
+           </a>
+           <ul class="dropdown-menu">
+             <li>
+               <a :href="picked.project_settings.dishes_path"><%= t ('dishes.dishes') %> </a>
+               <a :href="picked.project_settings.key_pairs_path"><%= t('key_pairs.key_pairs') %> </a>
+               <a :href="picked.project_settings.project_parameters_path"><%= t('project_parameters.title') %> </a>
+             </li>
+           </ul>
+         </div>
+    </div>
+
+    <div class="pull-right">
+      <a class="btn btn-default btn-sm disabled"
+          v-bind:href="picked.edit_project_url" :class="{disabled: !can_edit()}">
           <span class='glyphicon glyphicon-edit'></span>
           <%= t 'helpers.links.edit' %>
       </a>&nbsp
