--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -9,27 +9,25 @@
 <script id="grid-template" type="text/template"> <%= render 'vue/index' %> </script>
 
 <!-- demo root element -->
-
-
-
 <div id="indexElement" v-el:node>
 
   <div>
     <div class="col-md-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
     <div class="pull-right">
-      <a class="btn btn-danger btn-sm"
+      <a class="btn btn-danger btn-sm disabled"
       @click="delete_entry()"
-        :class="{disabled: picked.code[1] > 0}" v-if="can_delete()">
+      v-if="picked.delete_client_path !== null"
+      :class="{disabled: can_delete()}">
           <%= fa 'times' %>
           <%= t 'common.btn.delete' %>
       </a>&nbsp
     </div>
 
     <div class="pull-right">
-      <a class="btn btn-default btn-sm"
-          v-bind:href="picked.edit_url"
-          v-if="can_edit()">
+      <a class="btn btn-default btn-sm disabled"
+          v-bind:href="picked.edit_client_path"
+          :class="{disabled: !can_edit()}">
           <span class='glyphicon glyphicon-edit'></span>
           <%= t 'helpers.links.edit' %>
       </a>&nbsp
