--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -46,10 +46,12 @@
     </div>
   </div>
 
+
   <demo-grid
   :data="gridData"
   :columns="gridColumns"
-  :filter-key="searchQuery">
+  :filter-key="searchQuery"
+  :index="index">
   </demo-grid>
 </div>
 
