--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -1,11 +1,12 @@
 <!-- component template -->
   <table class="table table-hover ssp">
+    
   <thead>
     <tr>
       <th v-for=" key in columns"
           :class="{active: sortKey == key}"
           @click="sortBy(key)">
-        <span v-html="key | wrap option"></span>
+        <span v-html="key | wrap index"></span>
           <span v-if="key !== 'id' && key !== 'role'" class="pull-right glyphicon" :class="sortOrders[key] > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
           <i v-if="key === 'role'"><a href="#" id="role" @click="pop()"
             data-content="<%= t('users.msg.role')%>"
@@ -26,7 +27,7 @@
         | orderBy sortKey sortOrders[sortKey]
         | paginate" :class="{info: picked == entry}">
         <td v-for="key in columns" @click="select_entry(entry)" @dblclick="show_entry(entry)">
-          <span id="{{key}}" v-html="entry[key] | listen key option lang"></span>
+          <span id="{{key}}" v-html="entry[key] | listen key index lang"></span>
         </td>
       </tr>
       <tr  v-if="filteredLength === 0 && data.length > 0">
