--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -12,30 +12,44 @@
   <div class="muted"><%= t('dishes.msg.description') %></div>
 </div>
 
-<%= render 'vue/index'%>
+<script id="grid-template" type="text/template"> <%= render 'vue/index' %> </script>
 
-<table class="table hidden">
-  <tbody>
-    <% @dishes.each do |dish| %>
-      <% next unless allow_change or dish.status == Dish::STATUS[:success] %>
+<div id="indexElement" v-el:node>
 
-      <tr data-dish-id="<%= dish.id %>">
-        <td>
-          <%= link_to t('helpers.links.show'), '#', class: 'btn btn-xs btn-info show-dish' %>
-          <% if allow_change %>
-            <%= link_to t('.destroy', default: t("helpers.links.destroy").html_safe),
-              dish_path(dish),
-              method: :delete,
-              data:   { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) },
-              class:  'btn btn-xs btn-danger',
-              id: 'delete-'+dish.id.to_s %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div>
+    <div class="col-xs-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
+    <div class="pull-right">
+      <a class="btn btn-danger btn-sm disabled"
+      @click="delete_entry()"
+        v-if="picked.delete_project_url !== null"
+        :class="{disabled: can_delete()}">
+          <%= fa 'times' %>
+          <%= t 'common.btn.delete' %>
+      </a>&nbsp
+    </div>
+
+    <div class="pull-right" v-cloak="picked">
+      <a class="btn btn-default btn-sm disabled"
+          :href="picked.edit_project_url" :class="{disabled: !can_edit()}">
+          <span class='glyphicon glyphicon-edit'></span>
+          <%= t 'helpers.links.edit' %>
+      </a>&nbsp
+    </div>
+  </div>
+
+
+  <demo-grid
+  :data="gridData"
+  :columns="gridColumns"
+  :filter-key="searchQuery"
+  :index="index">
+  </demo-grid>
+</div>
+
+<div  id="empty" style="display: none;"></div>
+<span id="loading"><div class="loader"></div> <%= t 'common.msg.loading' %></span>
+<hr>
 
 <% if allow_change %>
   <%= link_to t('.new', default: t('dishes.btn.add')),
