Operation schedule buttons and indexpage

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -41,7 +41,7 @@
              </a>&nbsp
              <ul class="dropdown-menu">
                <li v-if="picked">
-                 <a href='#'> <%=  t('infrastructures.btn.operation_schedule') %></a>
+                 <a @click="show_sched()" href='#'> <%=  t('infrastructures.btn.operation_schedule') %></a>
                  <a :href='picked.serverspecs_path'>Serverspecs</a>
                </li>
              </ul>
