More reactive index on client page by allowing to sync json data and used ws connector for messaing

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -17,7 +17,6 @@
     <div class="pull-right">
       <a class="btn btn-danger btn-sm disabled"
       @click="delete_entry()"
-      v-if="picked.delete_client_path !== null"
       :class="{disabled: can_delete()}">
           <%= fa 'times' %>
           <%= t 'common.btn.delete' %>
@@ -35,9 +34,10 @@
   </div>
 
   <demo-grid
-  :data="gridData"
+  :data.sync="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
+  :picked.sync="picked"
   :index="index">
   </demo-grid>
 </div>
