--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -17,7 +17,7 @@
     <div class="pull-right">
       <a class="btn btn-danger btn-sm disabled"
       @click="delete_entry()"
-      :class="{disabled: can_delete()}">
+      :class="{disabled: !can_delete()}">
           <%= fa 'times' %>
           <%= t 'common.btn.delete' %>
       </a>&nbsp
