more reactive json data on infrastructure, serverspec, dishes, cf_templates

--- a/app/views/cf_templates/index.html.erb
+++ b/app/views/cf_templates/index.html.erb
@@ -33,9 +33,10 @@
 
 
   <demo-grid
-  :data="gridData"
+  :data.sync="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
+  :picked.sync="picked"
   :index="index">
   </demo-grid>
 </div>
