--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -58,9 +58,10 @@
     </div>
 
     <demo-grid
-    :data="gridData"
+    :data.sync="gridData"
     :columns="gridColumns"
     :filter-key="searchQuery"
+    :picked.sync="picked"
     :index="index">
     </demo-grid>
   </div>
