--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -32,9 +32,10 @@
 
 
   <demo-grid
-  :data="gridData"
+  :data.sync="gridData"
   :columns="gridColumns"
   :filter-key="searchQuery"
+  :picked.sync="picked"
   :index="index">
   </demo-grid>
 </div>
