USer admin page reactive json data syncing from backend for delete and edit functionality fiox

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -29,11 +29,11 @@
         </a>&nbsp
       </div>
 
-
   <demo-grid
-    :data="gridData"
+    :data.sync="gridData"
     :columns="gridColumns"
     :filter-key="searchQuery"
+    :picked.sync="picked"
     :index="index">
   </demo-grid>
 </div>
