--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -11,7 +11,7 @@
 <!-- demo root element -->
 <div id="indexElement" v-el:node>
 
-  <div>
+  <div v-cloak>
     <div class="col-md-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
     <div class="pull-right">
