--- a/app/views/serverspecs/index.html.erb
+++ b/app/views/serverspecs/index.html.erb
@@ -15,7 +15,7 @@
 
 <div id="indexElement" v-el:node>
 
-  <div>
+  <div v-cloak>
     <div class="col-xs-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
     <div class="pull-right">
