--- a/app/views/zabbix_servers/index.html.erb
+++ b/app/views/zabbix_servers/index.html.erb
@@ -2,12 +2,10 @@
 
 <h1>Listing Zabbix Servers</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Fqdn</th>
-      <th>Username</th>
-      <th>Password</th>
       <th>Version</th>
       <th>Details</th>
       <th colspan="3"></th>
@@ -18,8 +16,6 @@
     <% @zabbix_servers.each do |zabbix_server| %>
       <tr>
         <td><%= zabbix_server.fqdn %></td>
-        <td><%= zabbix_server.username %></td>
-        <td><%= zabbix_server.password %></td>
         <td><%= zabbix_server.version %></td>
         <td><%= zabbix_server.details %></td>
         <td><%= link_to 'Show', zabbix_server %></td>
