--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -59,18 +59,11 @@
             <span v-for="block_device in ec2.block_devices" class="dropdown">
               <bootstrap-tooltip :title="block_device.device_name">
                 <template slot="content">
-                <a @click="volume_selected = block_device.ebs.volume_id" :class="{'btn-primary': is_root_device(block_device.device_name)}" class="dropdown-toggle btn btn-xs btn-default" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <a @click="volume_selected = block_device.ebs.volume_id" :class="{'btn-primary': is_root_device(block_device.device_name)}" class="btn btn-xs btn-default" data-toggle="collapse" data-target="#ebs_panel">
                   {{block_device.ebs.volume_id}}
                   <span v-if="ec2.root_device_name === block_device.device_name" class="badge">Root</span>
                   <span class="caret"></span>
                 </a>
-                <ul class="dropdown-menu">
-                  <li class="dropdown-header"><%= t('snapshots.snapshot') %></li>
-                  <li><a @click="create_snapshot(block_device.ebs.volume_id)" href="#"><%= t('snapshots.create_snapshot') %></a></li>
-                  <li><a href="#snapshots-modal" data-toggle="modal"><%= t('snapshots.list_of_snapshots') %></a></li>
-                  <li><a @click="edit_retention_policy" href="#retention-policy-modal" data-toggle="modal"><%= t('snapshots.retention_policy') %></a></li>
-                  <li><a @click="open_snapshot_schedule_modal(block_device.ebs.volume_id)" href="#"><%= t('snapshots.schedule_snapshot') %></a></li>
-                </ul>
                 </template>
               </bootstrap-tooltip>
             </span>
@@ -89,6 +82,56 @@
               </ul>
               </template>
             </bootstrap-tooltip>
+            <div class="panel-group collapse" id="ebs_panel" role="tablist" style="margin-bottom: 0px">
+              <div class="panel panel-info">
+                <div class="panel-heading">
+                  {{volume_selected}}:
+                  <a @click="create_snapshot(volume_selected)" class="btn btn-xs">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    <%= t('snapshots.create_snapshot') %>
+                  </a>
+                  <a @click="edit_retention_policy" href="#retention-policy-modal" data-toggle="modal" class="btn btn-xs">
+                    <span class="glyphicon glyphicon-repeat"></span>
+                    <%= t('snapshots.retention_policy') %>
+                  </a>
+                  <a @click="open_snapshot_schedule_modal(volume_selected)" href="#" class="btn btn-xs">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                    <%= t('snapshots.change_schedule') %>
+                  </a>
+                </div>
+              </div>
+              <div id="ebs_panel" class="panel">
+                <div class="panel-heading">
+                  Snapshots of {{volume_selected}}
+                  <a @click="load_snapshots" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></a>
+                </div>
+                <table v-if="!loading_snapshots" class="table table-condensed table-hover">
+                  <thead>
+                    <th></th>
+                    <th class=""         @click="sort_by('tags.Name')"  >Name<span           :class="{'caret': sorting_by('tags.Name'),   'caret-reversed': sort_asc}"></span></th>
+                    <th class="col-md-2" @click="sort_by('snapshot_id')">ID<span             :class="{'caret': sorting_by('snapshot_id'), 'caret-reversed': sort_asc}"></span></th>
+                    <th class="col-md-2" @click="sort_by('state')"      >State<span          :class="{'caret': sorting_by('state'),       'caret-reversed': sort_asc}"></span></th>
+                    <th class=""         @click="sort_by('start_time')" >Date<span           :class="{'caret': sorting_by('start_time'),  'caret-reversed': sort_asc}"></span></th>
+                    <th class=""         @click="sort_by('encrypted')"  >Encrypted<span      :class="{'caret': sorting_by('encrypted'),   'caret-reversed': sort_asc}"></span></th>
+                    <th></th>
+                  </thead>
+                  <tbody>
+                    <tr v-for="snapshot in snapshots" @click="select_snapshot(snapshot)" :class="{info: snapshot.selected}" transition="fade">
+                      <td><input v-model="snapshot.selected" type="checkbox"></td>
+                      <td v-text="snapshot.tags.Name" style="word-break: break-all"></td>
+                      <td v-text="snapshot.snapshot_id"></td>
+                      <td v-text="snapshot_status(snapshot)"></td>
+                      <td v-text="toLocaleString(snapshot.start_time)"></td>
+                      <td v-text="snapshot.encrypted"></td>
+                      <td><i class="fa fa-lock" v-show="snapshot.tags.<%= Snapshot::PROTECTION_TAG_NAME %>"></i></td>
+                    </tr>
+                    <tr v-if="!snapshots.length">
+                      <td colspan="8"><%= t('snapshots.msg.no_snapshots') %></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </td>
         </tr>
         <tr>
