--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -102,7 +102,7 @@
               </div>
               <div id="ebs_panel" class="panel">
                 <div class="panel-heading">
-                  Snapshots of {{volume_selected}}
+                  <%= t 'snapshots.snapshots' %>
                   <a @click="load_snapshots" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></a>
                 </div>
                 <table v-if="!loading_snapshots" class="table table-condensed table-hover">
