--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -86,25 +86,25 @@
               <div class="panel panel-info">
                 <div class="panel-heading">
                   <strong>{{volume_selected}}</strong>:
-                  <a @click="create_snapshot(volume_selected)" class="btn btn-xs btn-primary">
+                  <button @click="create_snapshot(volume_selected)" class="btn btn-xs btn-primary">
                     <span class="glyphicon glyphicon-plus"></span>
                     <%= t('snapshots.create_snapshot') %>
-                  </a>
-                  <a @click="edit_retention_policy" href="#retention-policy-modal" data-toggle="modal" class="btn btn-xs">
+                  </button>
+                  <button @click="edit_retention_policy" href="#retention-policy-modal" data-toggle="modal" class="btn btn-xs btn-warning">
                     <span class="glyphicon glyphicon-repeat"></span>
                     <%= t('snapshots.retention_policy') %>
-                  </a>
-                  <a @click="open_snapshot_schedule_modal(volume_selected)" href="#" class="btn btn-xs">
+                  </button>
+                  <button @click="open_snapshot_schedule_modal(volume_selected)" href="#" class="btn btn-xs btn-warning">
                     <span class="glyphicon glyphicon-calendar"></span>
-                    <%= t('snapshots.change_schedule') %>
-                  </a>
+                    <%= t('schedules.change_schedule') %>
+                  </button>
                 </div>
               </div>
               <div id="ebs_panel" class="panel">
                 <div class="panel-heading">
                   <%= t 'snapshots.snapshots' %>
-                  <a @click="load_snapshots" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></a>
                   <a @click="delete_selected_snapshots" :disabled="!selected_any" class="btn btn-sm btn-danger" style="float: right;"><span class="glyphicon glyphicon-trash"></span> <%= t('helpers.links.destroy') %></a>
+                  <button @click="load_snapshots" :disabled="loading_snapshots" class="btn btn-xs btn-default"><span class="fa fa-refresh" :class="{'fa-spin': loading_snapshots}"></span></button>
                 </div>
                 <div-loader v-if="loading_snapshots" style="padding-left: 20px"></div-loader>
                 <table v-if="!loading_snapshots && snapshots.length" class="table table-condensed table-hover">
